--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,8 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /static/styles.*
+  static_dir: static/styles
 - url: /static.*
   static_dir: static
 - url: /.*
