logout added to all pages

--- a/app.yaml
+++ b/app.yaml
@@ -5,24 +5,31 @@ threadsafe: true
 handlers:
 - url: /static/styles.*
   static_dir: static/styles
+  login: required
 - url: /static.*
   static_dir: static
+  login: required
 - url: /.*
   script: main.app
-- url: /search.*
-  script: main.app
-- url: /result.*
-  script: main.app
-- url: /details.*
-  script: main.app
-- url: /history.*
-  script: main.app
   login: required
-- url: /favorites.*
-  script: main.app
-  login: required
-- url: /aboutus.*
-  script: main.app
+# - url: /search.*
+#   script: main.app
+#   login: required
+# - url: /result.*
+#   script: main.app
+#   login: required
+# - url: /details.*
+#   script: main.app
+#   login: required
+# - url: /history.*
+#   script: main.app
+#   login: required
+# - url: /favorites.*
+#   script: main.app
+#   login: required
+# - url: /aboutus.*
+#   script: main.app
+#   login: required
 
 libraries:
 - name: jinja2
